--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -40,24 +40,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Update Submodules
         run: git submodule update --init --recursive --remote
-      - name: Detect package manager
-        working-directory: ./
-        id: detect-package-manager
-        run: |
-          if [ -f "./yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "./package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
-          elsenpm 
-            echo "Unable to determine package manager"
-            exit 1
-          fi
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -67,9 +49,7 @@ jobs:
 
       - name: Build with Next.js
         run: |
-          yarn run export
-          find ./out | sed -e "s/[^-][^\/]*\//  |/g" -e "s/|\([^ ]\)/|-\1/"
-        
+          pnpm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
