--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -40,24 +40,19 @@ jobs:
         uses: actions/checkout@v4
       - name: Update Submodules
         run: git submodule update --init --recursive --remote
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
         with:
-          node-version: '22'
+          version: 10
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: "pnpm"
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-
+        run: pnpm install
       - name: Build with Next.js
-        run: |
-          # Install pnpm if not already installed
-          if ! command -v pnpm &> /dev/null
-          then
-            npm install -g pnpm
-          fi
-        
-          pnpm install
-          pnpm run build
-
+        run: pnpm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
