--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -51,6 +51,10 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
+      - name: Inject basePath into next.config.js
+        run: |
+          echo "module.exports = { basePath: '/nextjs' };" > next.config.js
+
       - name: Build with Next.js
         run: pnpm run build
       - name: Upload artifact
