--- a/package.json
+++ b/package.json
@@ -17,13 +17,32 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@mui/material-nextjs": "^7.3.0",
-    "@next/mdx": "^15.4.7",
+    "@next/mdx": "^15.5.0",
+    "@stefanprobst/rehype-extract-toc": "^3.0.0",
     "@types/mdx": "^2.0.13",
-    "next": "15.4.6",
+    "estree-util-value-to-estree": "^3.4.0",
+    "glob": "^11.0.3",
+    "mdx": "link:@stefanprobst/rehype-extract-toc/mdx",
+    "next": "15.5.0",
+    "raw-loader": "^4.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "react-remark": "^2.1.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-react": "^8.0.0",
+    "rehype-remark": "^10.0.1",
+    "rehype-sanitize": "^6.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark": "^15.0.1",
+    "remark-flexible-toc": "^1.2.0",
     "remark-frontmatter": "^5.0.0",
-    "remark-mdx-frontmatter": "^5.2.0"
+    "remark-mdx-frontmatter": "^5.2.0",
+    "remark-mdx-toc": "link:lib",
+    "remark-parse": "^11.0.0",
+    "remark-toc": "^9.0.0",
+    "unist-util-mdx-define": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
