--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -64,12 +64,12 @@ jobs:
   # Deployment job
   deploy:
     if: github.event_name != 'pull_request' && github.ref =='refs/heads/main'
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Hit Web Hook
+        run: |
+          curl -X 'POST' \
+            'https://badgercompute.chtc.chtc.io/api/api/hooks/release-download-toggle' \
+            -H 'accept: application/json' \
+            -d ''
