--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
 services:
   web:
-    image: node:22
+
+    build: .
     volumes:
       - .:/app
     working_dir: /app
-    command: /bin/bash -c "pnpm install && pnpm run dev"
+    command: /bin/sh -c "pnpm install && pnpm run dev"
     ports:
       - "3000:3000"
     stdin_open: true
