--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-markdown": "^10.1.0",
     "react-remark": "^2.1.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-highlight": "^7.0.2",
     "rehype-react": "^8.0.0",
     "rehype-remark": "^10.0.1",
     "rehype-sanitize": "^6.0.0",
